// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots molecules|Box collapsible 1`] = `
.c0 {
  padding: 12px;
}

.c3 {
  height: 1em;
  line-height: 1em;
  text-transform: none;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  font-size: 22px;
  width: 0;
}

.c3 svg {
  vertical-align: middle;
}

.c5 {
  font-family: 'Fira Sans',sans-serif;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  background-color: #F4F4F4;
  height: 60px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0 2.5em 0 1.25em;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c4 {
  padding: 0 1.25em;
}

.c1 {
  box-sizing: border-box;
  width: 100%;
  margin: 10px 0;
  border: 2px solid #F4F4F4;
  border-top-left-radius: 3px;
  border-top-right-radius: 3px;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      Notifications
      <span
        className="c3"
        data-test="container-collapser"
        onClick={[Function]}
      >
        <svg
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          strokeWidth="0"
          style={
            Object {
              "color": undefined,
            }
          }
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7.41 15.41L12 10.83l4.59 4.58L18 14l-6-6-6 6z"
          />
        </svg>
      </span>
    </div>
    <div
      className="c4"
    >
      <div
        className="c5"
      >
        Consequuntur eos enim sit quas est tempore accusamus assumenda. Magni qui voluptatem eos occaecati. Consequatur qui perferendis aut tempore optio est facere ducimus in. Dolores facilis consequatur consequatur odit atque suscipit vero error eum.
 
Praesentium tempore vel culpa dolore ad nihil natus. Tempore unde aliquid dolore vero aut adipisci dolore placeat. Nostrum et est voluptatem. Cupiditate consequatur vel ex aperiam numquam. Assumenda qui nemo reiciendis minus inventore maxime neque modi.
 
Ut velit enim qui. Autem minus accusantium amet aut et. Distinctio et est vitae dolorem incidunt nobis quia.
 
Expedita quo sint omnis quasi corporis rem fugiat atque iusto. Et aut nihil doloremque deleniti et consequuntur. Reiciendis est nesciunt voluptate sed recusandae. Provident ea ducimus ratione voluptas qui. Amet quae facilis ducimus facere.
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots molecules|Box default 1`] = `
.c0 {
  padding: 12px;
}

.c4 {
  font-family: 'Fira Sans',sans-serif;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  background-color: #F4F4F4;
  height: 60px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0 2.5em 0 1.25em;
}

.c3 {
  padding: 0 1.25em;
}

.c1 {
  box-sizing: border-box;
  width: 100%;
  margin: 10px 0;
  border: 2px solid #F4F4F4;
  border-top-left-radius: 3px;
  border-top-right-radius: 3px;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      Notifications
    </div>
    <div
      className="c3"
    >
      <div
        className="c4"
      >
        Eos rerum natus sint est ut qui aut et dolores. Suscipit aut saepe in sed. Qui sint quo sint cupiditate. Neque dolore hic quis inventore recusandae.
 
In nulla vel et rerum tempora consequuntur dicta voluptate tempora. Ipsam voluptatem quia vero est. Velit tenetur illum. Amet odio cumque nesciunt. Debitis sunt deleniti ut. Inventore ad tempora ab nam eos.
 
Occaecati dolor quia qui sunt non repellat odit illum. Deserunt sequi reiciendis corporis ut voluptas. Et aperiam quo explicabo adipisci et quasi. Aut autem voluptatem aut id dolorem.
 
Esse assumenda adipisci dolorem dolorem harum fuga libero inventore voluptatum. Perferendis voluptatibus aliquid est quos. Qui qui totam odio. Laborum eos voluptatem aut aut possimus. Voluptatem asperiores maiores dolorem eius. Laboriosam quidem cupiditate eaque facere aliquam.
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots molecules|Box helpers 1`] = `
.c0 {
  padding: 12px;
}

<div
  className="c0"
/>
`;
